--- a/app/pages/properties/setrates/setrates.component.css
+++ b/app/pages/properties/setrates/setrates.component.css
@@ -1,39 +1,38 @@
-.card .nav-pills {
-	margin-top: 5px;
+.table-rates {
 }
-.nav-pills .nav-pill {
-	width: 96px;
-	height: 96px;
+.table-rates thead th {
+	font-size: 16px;
+	text-align: left;
+	color: #999999;
+	border-bottom: 1px solid #c6c6c6;
 }
-.nav-pills .nav-pill a {
-	color: #455a64;
-	font-size: 12px;
-	border-radius: 3px;
-	padding-left: 10px;
-	padding-right: 10px;
-	line-height: normal;
-	min-width: 96px;
-	height: 96px;
+.table-rates tbody td {
+	font-size: 16px;
+	text-align: left;
+	color: #0b5a7c;
+	font-weight: 400;
 }
-.nav-pills .nav-pill.active a{
-	background: #eceff1;
-	box-shadow: none;
+.table-rates tbody td.text-right {
+	text-align: right;
 }
-.nav-pills .nav-pill .material-icons {
-	font-size: 36px;
-	padding: 6px 0;
+.table-rates tbody td .date-group .material-icons{
+	float: left;
+	font-size: 16px;
+	line-height: 36px;
+	margin-right: 15px;
 }
-.btn-back {
-	text-transform: uppercase;
-	font-size: 14px;
-	color: #7c7c7c;
-	display: inline-block;
+.table-rates tbody td .date-group.is-focused .material-icons{
+	color: #5399bc;
 }
-
-.btn-back i {
-	font-size: 14px;
+.table-rates tbody td .form-control {
+	height: 35px;
+	font-size: 16px;
+	text-align: left;
+	color: #0b5a7c;
 }
-
+.table-rates tbody td .text-value {
+	line-height: 36px;
+}
 
 
 
@@ -41,27 +40,44 @@
 
 
 /*
-.metafilter-names .nav-pills > li.active > a, .metafilter-names .nav-pills > li > a:hover {
-    background-color: #0b5a7c !important;
+.table-rates td {
+	border-top: 1px solid #c6c6c6;
 }
 
-.card-content, .tab-content {
+.table-rates .text-right {
+	min-width: 240px;
+	padding: 0 !important;
+}
+
+.table-rates .text-right button {
+	min-width: 80px;
+	padding: 14px 0;
 	margin: 0;
+	text-align: center;
+	font-size: 14px;
+	text-transform: none;
+	border-radius: 0;
 }
 
-li > a.has-error {
-	color: red !important;
+.table-rates .text-right button:hover {
+	background-color: rgba(200, 200, 200, 0.2);
 }
 
-.checkbox {
-	display: inline-block;
-	widows: 150px;
+.table-rates .text-right .btn-set-rates {
+	color: #0b5a7c;
 }
 
-.checkbox label {
-	color: black;
+.table-rates .text-right .btn-edit {
+	color: #5399bc;
 }
-.ng-touched.ng-invalid input.ng-invalid {
-	background-color: #000;
+
+.table-rates .text-right .btn-delete {
+	color: #b71c1c;
+}
+
+.table-rates .text-right i {
+	font-size: 24px;
+	padding: 4px 0;
+	display: block;
 }
 */
