--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -1,8 +1,124 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <form (ngSubmit)="onSubmit()" class="col-xs-12">
-                
+            <form [formGroup]="ratesForm" (ngSubmit)="onSubmit()" class="col-xs-12">
+                <div class="card">
+                    <div class="card-header card-header-icon" data-background-color="blue">
+                        <i class="material-icons">assignment</i>
+                    </div>
+                    <div class="card-content">
+                        <h4 class="card-title">Set Rates</h4>
+                        <div class="material-datatables">
+                            <table id="datatables"
+                                   class="table table-rates"
+                                   cellspacing="0" width="100%" style="width:100%">
+                                <thead>
+                                    <tr>
+                                        <th>Start Date</th>
+                                        <th>End Date</th>
+                                        <th>Value</th>
+                                        <th>Currency</th>
+                                        <th class="disabled-sorting text-right"></th>
+                                    </tr>
+                                </thead>
+                                <tfoot>
+                                <tr>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th class="disabled-sorting text-right"></th>
+                                </tr>
+                                </tfoot>
+                                <tbody formArrayName="Rates" id="bookingTableBody" *ngIf="ratesForm.controls.Rates">
+                                    <tr *ngFor="let rate of ratesForm.controls.Rates.controls; let i = index">
+                                        <td width="30%">
+                                            <div class="form-group date-group" *ngIf="isEdit[i]">
+                                                <i class="material-icons">insert_invitation</i>
+                                                <input type="text"
+                                                       class="form-control datepicker"
+                                                       [formControl]="rate.controls.StartDate"/>
+                                            </div>
+                                            <div class="form-group date-group" *ngIf="!isEdit[i]">
+                                                <i class="material-icons">insert_invitation</i>
+                                                <span class="text-value">{{rate.controls.StartDate.value}}</span>
+                                            </div>
+                                        </td>
+                                        <td width="30%">
+                                            <div class="form-group date-group" *ngIf="isEdit[i]">
+                                                <i class="material-icons">insert_invitation</i>
+                                                <input type="text"
+                                                       class="form-control datepicker"
+                                                       [formControl]="rate.controls.EndDate"/>
+                                            </div>
+                                            <div class="form-group date-group" *ngIf="!isEdit[i]">
+                                                <i class="material-icons">insert_invitation</i>
+                                                <span class="text-value">{{rate.controls.EndDate.value}}</span>
+                                            </div>
+                                        </td>
+                                        <td width="20%">
+                                            <div class="form-group" *ngIf="isEdit[i]">
+                                                <input type="text"
+                                                       class="form-control"
+                                                       [formControl]="rate.controls.Value" />
+                                            </div>
+                                            <div class="form-group" *ngIf="!isEdit[i]">
+                                                <span class="text-value">{{rate.controls.Value.value}}</span>
+                                            </div>
+                                        </td>
+                                        <td width="10%">
+                                            <div class="form-group">
+                                                <span>{{rate.controls.Currency.value}}</span>
+                                            </div>
+                                        </td>
+                                        <td width="10%" class="text-right">
+                                            <button class="btn btn-simple btn-edit btn-icon"
+                                                    type="button"
+                                                    *ngIf="!isEdit[i]"
+                                                    (click)="editRates({index: i, propertyId: 1, isEdit: true})">
+                                                <i class="material-icons text-primary">edit</i>
+                                            </button>
+                                            <button class="btn btn-simple btn-delete btn-icon"
+                                                    type="button"
+                                                    *ngIf="!isEdit[i]"
+                                                    (click)="removeRates({index: i, propertyId: 1})">
+                                                <i class="material-icons text-danger">delete</i>
+                                            </button>
+                                            <button class="btn btn-simple btn-edit btn-icon"
+                                                    type="button"
+                                                    *ngIf="isEdit[i]"
+                                                    (click)="editRates({index: i, propertyId: 1, isEdit: false})">
+                                                <i class="material-icons text-primary">done</i>
+                                            </button>
+                                            <button class="btn btn-simple btn-delete btn-icon"
+                                                    type="button"
+                                                    *ngIf="isEdit[i]"
+                                                    (click)="clearRates({index: i, propertyId: 1})">
+                                                <i class="material-icons text-danger">clear</i>
+                                            </button>
+                                        </td>
+                                        {{ !propertyService.isReading && !datatableInited ? finishReading() : "" }}
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <button class="btn btn-simple btn-edit btn-icon"
+                                            type="button"
+                                            (click)="addRow()">
+                                        <i class="material-icons text-primary">add</i>Add Rate
+                                    </button>
+                                    <button class="btn btn-simple btn-delete btn-icon"
+                                            type="button"
+                                            *ngIf="!isEdit"
+                                            (click)="removeRates({index: 1, propertyId: 1})">
+                                        <i class="material-icons text-danger">delete</i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
