--- a/app/pages/users/login/login.component.html
+++ b/app/pages/users/login/login.component.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/#/dashboard">MD Pro Angular</a>
+            <a class="navbar-brand" href="/#/dashboard">MD Pro Angular111</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
