--- a/app/pages/users/login/login.component.html
+++ b/app/pages/users/login/login.component.html
@@ -13,23 +13,18 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="/#/dashboard">
+                    <a href="/home">
                         <i class="material-icons">dashboard</i> Dashboard
                     </a>
                 </li>
                 <li class="">
-                    <a href="register.html">
+                    <a href="/register">
                         <i class="material-icons">person_add</i> Register
                     </a>
                 </li>
                 <li class=" active ">
-                    <a href="login.html">
+                    <a href="/login">
                         <i class="material-icons">fingerprint</i> Login
-                    </a>
-                </li>
-                <li class="">
-                    <a href="lock.html">
-                        <i class="material-icons">lock_open</i> Lock
                     </a>
                 </li>
             </ul>
@@ -100,40 +95,5 @@
                 </div>
             </div>
         </div>
-        <footer class="footer">
-            <div class="container">
-                <nav class="pull-left">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Company
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Portfolio
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Blog
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <p class="copyright pull-right">
-                    &copy;
-                    <script>
-                        document.write(new Date().getFullYear())
-                    </script>
-                    <a href="https://www.creative-tim.com">Creative Tim</a>, made with love for a better web
-                </p>
-            </div>
-        </footer>
     </div>
 </div>
