--- a/app/pages/properties/metafiltercomponents/metafilter.component.html
+++ b/app/pages/properties/metafiltercomponents/metafilter.component.html
@@ -5,15 +5,16 @@
         <div class="" *ngFor="let subtype of metadata.MetaDataSubTypes">
             <div class="row">
                 <div class="col-xs-3">
-                    <select class="selectpicker" data-style="select-with-transition" title="{{subtype.Name}}" data-size="7"
+                    <select class="metafilter-select selectpicker"
+                            data-style="select-with-transition"
+                            title="{{subtype.Name}}"
+                            data-size="7"
+                            multiple
                             [attr.option-subtype]="'type_' + subtype.Id"
                             (change)="subfilterChange($event)">
                         <option *ngFor="let option of propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].controls; let i = index"
                                 value="{{i}}"
-                                title="{{subtype.Name}}"
-                                [attr.option-id]="option.controls.MetaDataId.value"
-                                [attr.option-name]="option.controls.MetaDataName.value"
-                                [attr.option-index]="i">
+                                title="{{subtype.Name}}">
                             {{option.controls.MetaDataName.value}}
                         </option>
                     </select>
