User block to be collapsible

--- a/app/components/sidebar/sidebar.component.html
+++ b/app/components/sidebar/sidebar.component.html
@@ -12,10 +12,13 @@
             <img src="../assets/img/faces/avatar.jpg"/>
         </div>
         <div class="info">
-            <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                <span>Tania Andrew</span>
+            <a data-toggle="collapse" href="#collapseUser" class="collapsed">
+                <span>
+                    Tania Andrew
+                    <b class="caret"></b>
+                </span>
             </a>
-            <div class="collapse in" id="collapseExample">
+            <div class="collapse" id="collapseUser">
                 <ul class="nav">
                     <li>
                         <a href="javascript:void(0)">
