--- a/app/components/shared/navbar/navbar.component.html
+++ b/app/components/shared/navbar/navbar.component.html
@@ -13,7 +13,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand navbar-left" href="{{getPath()}}"> {{getTitle()}} </a>
+            <a class="navbar-brand navbar-left title-page" [routerLink]="[activePage.path]">
+                <i class="material-icons">{{activePage.icon}}</i>
+                <span>{{activePage.title}}</span>
+            </a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
