--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -10,7 +10,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-header-icon" data-background-color="blue">
-                        <i class="material-icons">assignment</i>
+                        <i class="material-icons">store</i>
                     </div>
                     <div class="card-content">
                         <h4 class="card-title">All Properties</h4>
