--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -161,6 +161,14 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .tab-content >div.active {
 	display: inherit;
 }
+.nav-pills .nav-pill.has-error.active a {
+	background-color: #b71c1c !important;
+	color: #fff;
+}
+
+.nav-pill.has-error a {
+	color: #b71c1c;
+}
 
 
 /**
@@ -278,6 +286,11 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	display: none !important;
 }
 
+.form-group.has-error .form-control {
+	background-image: linear-gradient(#b71c1c, #b71c1c), linear-gradient(#5399bc, #5399bc);
+	background-size: 100% 2px, 100% 1px;
+	transition-duration: 0.3s;
+}
 
 /**
  * Custom button
