hide nav button

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="row p-b-none">
+        <div class="row p-b-none hidden">
             <div class="col-xs-offset-6 col-xs-6">
                 <button type="button"
                         data-toggle="tab"
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </div>
-        <div class="row p-b-none">
+        <div class="row p-b-none hidden">
             <div class="col-xs-6">
                 <button href="#heading-name_address" role="tab" data-toggle="tab" class="btn btn-success">Back</button>
             </div>
@@ -206,7 +206,7 @@
                 </div>
             </div>
         </div>
-        <div class="row p-b-none">
+        <div class="row p-b-none hidden">
             <div class="col-xs-6">
                 <button href="#heading-description" role="tab" data-toggle="tab" class="btn btn-success">Back</button>
             </div>
@@ -335,7 +335,7 @@
                 </div>
             </div>
         </div>
-        <div class="row p-b-none">
+        <div class="row p-b-none hidden">
             <div class="col-xs-6">
                 <button href="#heading-admin_info" role="tab" data-toggle="tab" class="btn btn-success">Back</button>
             </div>
@@ -393,7 +393,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row hidden">
             <div class="col-xs-6">
                 <button href="#heading-size_rooms" role="tab" data-toggle="tab" class="btn btn-success">Back</button>
             </div>
