--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -13,8 +13,17 @@
                         <i class="material-icons">store</i>
                     </div>
                     <div class="card-content">
-                        <h4 class="card-title">All Properties</h4>
+                        <h4 class="card-title" *ngIf="!search.value">All Properties</h4>
+                        <h4 class="card-title" *ngIf="search.value">Properties Search Results for '{{search.value}}'</h4>
                         <div class="material-datatables">
+                            <div class="row">
+                                <div class="col-xs-offset-6 col-xs-6 col-sm-offset-6 col-sm-6 col-md-offset-6 col-md-6 col-lg-offset-9 col-lg-3">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">Search</label>
+                                        <input id="datatableSearch" type="text" class="form-control" #search>
+                                    </div>
+                                </div>
+                            </div>
                             <table id="datatables"
                                    class="table table-striped table-no-bordered table-hover table-properties"
                                    cellspacing="0" width="100%" style="width:100%">
