'Add property' button 990px

--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -1,10 +1,11 @@
 <div class="main-content">
     <div class="container-fluid">
-        <div class="toolbar">
-            <!-- Here you can write extra buttons/actions for the toolbar              -->
-            <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey"
-                    [routerLink]="['addproperty']"><i class="material-icons">add</i> Add Property
-            </button>
+        <div class="toolbar row">
+            <div class="col-xs-12">
+                <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey"
+                        [routerLink]="['addproperty']"><i class="material-icons">add</i> Add Property
+                </button>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -84,11 +85,12 @@
             <!-- end col-md-12 -->
         </div>
         <!-- end row -->
-        <div class="toolbar">
-            <!-- Here you can write extra buttons/actions for the toolbar              -->
-            <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey"
-                    [routerLink]="addPropertyLink"><i class="material-icons">add</i> Add Property
-            </button>
+        <div class="toolbar row">
+            <div class="col-xs-12">
+                <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey"
+                        [routerLink]="['addproperty']"><i class="material-icons">add</i> Add Property
+                </button>
+            </div>
         </div>
     </div>
 </div>
