'Telephone' field number picker

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="form-group label-floating">
                         <label class="control-label">Telephone</label>
-                        <input type="number" min="0" class="form-control" [formControl]="control.controls.Telephone">
+                        <input type="text" class="form-control" [formControl]="control.controls.Telephone">
                     </div>
                     <div class="row">
                         <div class="col-sm-6 col-md-6 col-lg-6">
