--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -197,7 +197,10 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .control-label {
 	color: #b0bec5 !important;
 }
-.form-group.is-focused .form-control, .btn-group.bootstrap-select.show-tick.open .select-with-transition {
+.form-group.is-focused .form-control {
+	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
+}
+.btn-group.bootstrap-select.show-tick.open .select-with-transition {
 	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc) !important;
 }
 .radio {
@@ -296,10 +299,8 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	display: none !important;
 }
 
-.form-group.has-error .form-control {
+.form-group.has-error .form-control, .form-group.has-error.is-focused .form-control {
 	background-image: linear-gradient(#b71c1c, #b71c1c), linear-gradient(#5399bc, #5399bc);
-	background-size: 100% 2px, 100% 1px;
-	transition-duration: 0.3s;
 }
 
 /**
