--- a/app/components/calendar/calendar.component.html
+++ b/app/components/calendar/calendar.component.html
@@ -12,7 +12,7 @@
         <div class="col-xs-3">
             <div class="form-group label-floating">
                 <label class="control-label">Minimum Days Stay</label>
-                <input type="number" class="form-control">
+                <input type="number" class="form-control" formControlName="MinimumStay">
             </div>
         </div>
     </div>
