--- a/app/components/calendar/calendar.component.html
+++ b/app/components/calendar/calendar.component.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12">
             <div class="form-group form-text">
                 <label class="control-label">iCal url:</label>
-                <span>http://privadia-api-dev.azurewebsites.net/Bookings/ICal/1</span>
+                <span class="form-control-static">http://privadia-api-dev.azurewebsites.net/Bookings/ICal/1</span>
             </div>
         </div>
     </div>
