--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -193,6 +193,7 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 */
 .form-control, .form-group .form-control {
 	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
+	background-position: center bottom, center calc(100% - 0px);
 }
 .control-label {
 	color: #b0bec5 !important;
@@ -202,8 +203,6 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 }
 .btn-group.bootstrap-select.show-tick.open .select-with-transition {
 	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc) !important;
-}
-.radio {
 }
 .radio label, .checkbox label {
 	font-size: 14px;
