--- a/app/pages/properties/metafiltercomponents/metafilter.component.html
+++ b/app/pages/properties/metafiltercomponents/metafilter.component.html
@@ -1,20 +1,21 @@
 <metafilter-heading-cmp [name]="metadata.Name" [group]="propertyForm"></metafilter-heading-cmp>
 
 <div [formGroup]="propertyForm">
-    <div formArrayName="MetaDataTmp">
-        <div class="" *ngFor="let subtype of metadata.MetaDataSubTypes">
-            <div class="row">
+    <div formGroupName="MetaDataTmp">
+        <div *ngFor="let subtype of metadata.MetaDataSubTypes">
+            <div class="row" formArrayName="{{'type_' + subtype.Id}}">
                 <div class="col-xs-3">
-                    <select class="metafilter-select selectpicker"
+                    <select class="metafilter-select selectpicker "
                             data-style="select-with-transition"
                             title="{{subtype.Name}}"
                             data-size="7"
                             multiple
-                            [attr.option-subtype]="'type_' + subtype.Id"
-                            (change)="subfilterChange($event)">
+                            [(ngModel)]="metafiltersModel"
+                            [ngModelOptions]="{standalone: true}"
+                            (ngModelChange)="subfilterModelChange($event, 'type_' + subtype.Id)">
                         <option *ngFor="let option of propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].controls; let i = index"
-                                value="{{i}}"
-                                title="{{subtype.Name}}">
+                                [formGroupName]="i"
+                                [ngValue]="option.value">
                             {{option.controls.MetaDataName.value}}
                         </option>
                     </select>
@@ -31,35 +32,31 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-            <!--
-            <div class="panel-heading" role="tab" id="heading-{{subtype.Id}}">
-                <a role="button" data-toggle="collapse" [attr.data-parent]="'#metadata-'+metadata.Id" href="#{{subtype.Id}}" aria-expanded="true" [attr.aria-controls]="subtype.Id">
-                    <h4 class="panel-title">
-                        {{subtype.Name}}
-                        <i class="material-icons">keyboard_arrow_down</i>
-                    </h4>
-                </a>
-            </div>
-            <div id="{{subtype.Id}}" class="panel-collapse collapse in" role="tabpanel" [attr.aria-labelledby]="'heading-'+subtype.Id">
-                <div class="panel-body">
-                    <button class="subtype-filter btn btn-sm {{ metafilters[option.controls.MetaDataId.value] ? 'btn-success' : 'btn-default'}}"
-                            *ngFor="let option of propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].controls; let i = index"
-                            [attr.option-id]="option.controls.MetaDataId.value"
-                            [attr.option-name]="option.controls.MetaDataName.value"
-                            [attr.option-subtype]="subtype.Id"
-                            [attr.option-index]="i" (click)="subfilterChange($event)">
-            <span class="btn-label">
-                <i class="material-icons">{{ metafilters[option.controls.MetaDataId.value] ? 'check' : 'close' }}</i>
-            </span>
-                        {{option.controls.MetaDataName.value}}
-                    </button>
-                </div>
-            </div>
-            -->
         </div>
     </div>
 </div>
+<!--
+<div class="panel-heading" role="tab" id="heading-{{subtype.Id}}">
+    <a role="button" data-toggle="collapse" [attr.data-parent]="'#metadata-'+metadata.Id" href="#{{subtype.Id}}" aria-expanded="true" [attr.aria-controls]="subtype.Id">
+        <h4 class="panel-title">
+            {{subtype.Name}}
+            <i class="material-icons">keyboard_arrow_down</i>
+        </h4>
+    </a>
+</div>
+<div id="{{subtype.Id}}" class="panel-collapse collapse in" role="tabpanel" [attr.aria-labelledby]="'heading-'+subtype.Id">
+    <div class="panel-body">
+        <button class="subtype-filter btn btn-sm {{ metafilters[option.controls.MetaDataId.value] ? 'btn-success' : 'btn-default'}}"
+                *ngFor="let option of propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].controls; let i = index"
+                [attr.option-id]="option.controls.MetaDataId.value"
+                [attr.option-name]="option.controls.MetaDataName.value"
+                [attr.option-subtype]="subtype.Id"
+                [attr.option-index]="i" (click)="subfilterChange($event)">
+<span class="btn-label">
+    <i class="material-icons">{{ metafilters[option.controls.MetaDataId.value] ? 'check' : 'close' }}</i>
+</span>
+            {{option.controls.MetaDataName.value}}
+        </button>
+    </div>
+</div>
+-->
